--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
+    "start": "webpack-dev-server --inline --progress --port 8080",
     "test": "echo \"Error: no test specified\" && exit 1",
     "wp-dev": "webpack --progress --colors --watch",
     "demo": "webpack-dev-server --entry ./app/* --output-filename ./dist/bundle/.js"
